syntax = "proto3";
 
option csharp_namespace = "RecordHub.CatalogService.Infrastructure";
 
package catalog;
 
service CatalogChecker {
  rpc CheckProductExisting (ProductRequest) returns (ProductReply);
}
 
message ProductRequest {
  string productId = 1;
}
 
message ProductReply {
  double price = 1;
  bool isExisting = 2;
  string Name = 3;
}